
2022-08-18 0.4.8:
 - new 结构 Autocall 中增加 Fixed Coupon Notes 定息票据定价模块及其示例。

2022-08-18 0.4.7:
 - new 结构 Autocall 中增加 Stage Coupon Snowball 阶段票息雪球定价模块，从票息填写便利考虑暂不与普通雪球模块合并。
 - opt 结构 Booster、Phoenix、Snowball、Sharkfin 等模块增加是否计算贴现的开关参数。
 - opt 结构 Sharkfin 支持看涨和看跌使用不同的敲出收益和参与率。
 - fix 修正 Booster、Phoenix、Snowball 等模块中一处自然日序列赋值异常可能导致计算崩溃的问题。
 - fix 修正 Stage Coupon Snowball 模块中取票息尾数时可能导致崩溃的问题。
 - new 结构 Booster、Phoenix、Snowball、Sharkfin 等模块增加是否收盘的开关参数，主要用于以盘后固定价格进行估值计算。
 - opt 增加起始天数和运行天数的参数值合法性校验，便于计算时自动化取值纠错。
 - opt 结构 Booster、Phoenix 模块增加前端扣费相关参数。
 - opt 结构 Phoenix 模块增加按次付息或到期付息选择参数。
 - fix 修正 Booster 模块中一处敲出天数计算错误的问题。

2022-04-20 0.4.6:
 - opt 结构 Barrier 中 Sharkfin 改进期权费对冲耗损计算。
 - new 结构 Barrier 中 Sharkfin 增加 consumed_option_fee_rate、occupied_option_fee_rate 参数。
 - fix 修正 Vanilla European 的 BS Vega 计算结果以波动率变动 1% 为单位，即缩小 100 倍。
 - fix 修正 Vanilla European 的 BS Theta 计算结果以 1day 为单位，即缩小 365 倍。
 - fix 修正 Vanilla European 的 BS Rho 计算结果以无风险利率变动 1% 为单位，即缩小 100 倍。
 - new 结构 Vanilla European 增加基于二叉树方法的隐含波动率、理论价格、希腊值、希腊值曲面等的计算并更新示例。
 - new 结构 Vanilla American 完成基于二叉树方法的隐含波动率、理论价格、希腊值、希腊值曲面等的计算并更新示例。

2022-04-01 0.4.5:
 - opt 提升 Booster、Phoenix、Snowball、Sharkfin 路径依赖结构单日期价格点多核计算性能最多可达 40% 左右。
 - opt 继续优化前述路径依赖结构多核计算性能，Payoff 和 Greeks 计算耗时降幅达 60% 到 80% 且多核效果显著。
 - fix 修正 Barrier 中 Sharkfin 行权支付年化问题。
 - opt 结构 Autocall 中 Booster、Phoenix、Snowball 改进保证金收益贴现计算。
 - new 结构 Autocall 中 Booster、Phoenix、Snowball 增加 use_option_fee、option_fee、option_fee_interest、back_end_load 参数。
 - opt 结构 Barrier 中 Sharkfin 改进期权费收益贴现计算。
 - new 结构 Barrier 中 Sharkfin 修改参数 price_rate 为 option_fee，增加 option_fee_interest、back_end_load 参数。

2022-03-21 0.4.4:
 - opt 任务消息队列由定价模块插件移至 CyberX Kernel 模块。
 - new 完成 Barrier Sharkfin 定价模块重构并更新示例。
 - fix 修正部分定价模块插件异常时任务结果未显示错误信息问题。
 - new 结构 Autocall 中 Booster、Phoenix、Snowball 计算票息时增加可选的自然日相关参数。
 - new 完成 Barrier Single 定价模块重构并更新示例。

2022-02-20 0.4.3:
 - new 完成 Digital Simple 定价模块重构并更新示例。
 - new 完成 Autocall Booster 定价模块重构并更新示例。
 - new 完成 Autocall Phoenix 定价模块重构并更新示例。
